fix: fixed notification system adding tag generation with swagger | fixed customer creation form
