# sources/core/Ggio.BikeSherpa.Backend/Features/Customers/Add/AddCustomerEndpoint.cs
@@ -1,6 +1,7 @@
 ﻿using FastEndpoints;
 using Ggio.BikeSherpa.Backend.Model;
 using Mediator;
+using Microsoft.AspNetCore.Builder;
 using Microsoft.AspNetCore.Http;
 
 namespace Ggio.BikeSherpa.Backend.Features.Customers.Add;
@@ -9,8 +10,9 @@ public class AddCustomerEndpoint(IMediator mediator) : Endpoint<Model.CustomerCr
 {
      public override void Configure()
      {
-          Post("/api/customer");
+          Post("/customer");
           Policies("write:customers");
+          Description(x => x.WithTags("customer").WithName("CreateCustomer"));
      }
 
      public override async Task HandleAsync(Model.CustomerCrud req, CancellationToken ct)
