# sources/core/Ggio.BikeSherpa.Backend/Features/Customers/Update/UpdateCustomerEndpoint.cs
@@ -1,5 +1,7 @@
 ﻿using FastEndpoints;
 using Mediator;
+using Microsoft.AspNetCore.Builder;
+using Microsoft.AspNetCore.Http;
 
 namespace Ggio.BikeSherpa.Backend.Features.Customers.Update;
 
@@ -7,8 +9,9 @@ public class UpdateCustomerEndpoint(IMediator mediator) : Endpoint<Model.Custome
 {
      public override void Configure()
      {
-          Put("/api/customer/{customerId:guid}");
+          Put("/customer/{customerId:guid}");
           Policies("write:customers");
+          Description(x => x.WithTags("customer").WithName("UpdateCustomer"));
      }
 
      public override async Task HandleAsync(Model.CustomerCrud req, CancellationToken ct)
